Use target/build as main build directory.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,5 @@ services:
       - "8080:80"
     volumes:
       - type: bind
-        source: ./build
+        source: ./target/build
         target: /usr/local/apache2/htdocs
