--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "clean": "rm -rf target",
-    "test": "tsc -p test-tsconfig.json && jasmine --config=jasmine.json",
+    "pretest": "tsc -p test-tsconfig.json",
+    "test": "jasmine --config=jasmine.json",
     "build": "tsc && cp -pR src/main/xhtml/*.xhtml src/main/resources/* target/build"
   },
   "devDependencies": {
